// HakjDB gRPC API
// API version: 0.3.0
//
// This package contains Protobuf definitions related to connection utility RPCs.

syntax = "proto3";
package api.v0.echopb;

option go_package = "api/v0/echopb";

message UnaryEchoRequest {
  // Message to be sent.
  string msg = 1;
}

message UnaryEchoResponse {
  // Message to be received.
  string msg = 1;
}

// EchoService provides connection utility RPCs.
// The RPCs in this service can be used to test connections to the server
// with minimal network overhead.
service EchoService {
  // UnaryEcho sends a message to the server and returns the same message back.
  rpc UnaryEcho(UnaryEchoRequest) returns (UnaryEchoResponse) {}
}
